finished implementing pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/aboutStyle.css">
     <link rel="stylesheet" href="css/sliderStyle.css">
     <link rel="stylesheet" href="css/contactStyle.css">
+    <link rel="stylesheet" href="css/bedStyle.css">
+    <link rel="stylesheet" href="css/productStyle.css">
 </head>
 <body>
     <section id="body">
@@ -56,7 +58,7 @@
 
         </div>
 
-        <div id="homeContent">
+        <!--<div id="homeContent">
             <div style="width: 65%; height: 96%;">
                 <div class="showcase-slider-container">
                     <div class="showcase-slider">
@@ -80,7 +82,7 @@
                 </div>
             </div>
 
-        </div>
+        </div>-->
 
         <!--<div id="contactContent">
             <div id="contactContainer">
@@ -237,6 +239,203 @@
                 </div>
             </div>
         </div>-->
+
+        <!--<div id="bedContent">
+            <div id="bedContainer">
+                <div class="productName">
+                    <p class="nameText">BEDS</p>
+                    <p class="addressText" style="margin-left: 72%;">Home > Bedroom > Bedroom Furniture > <b>Beds</b></p>
+                </div>
+
+                <div id="bedOuter">
+                    <div id="outer1">
+                        <div id="sort">
+                            <select name="Sort" id="sorting" >
+                                <option value="default">Default sorting</option>
+                                <option value="asc">Ascending</option>
+                                <option value="desc">Descending</option>
+                                <option value="price">Price</option>
+                            </select>
+                        </div>
+                        <div id="resultNumber">
+                            <p style="font-size: 12px; width: max-content; color: #8C8C8C;">Showing 1-10 of 24 results</p>
+                        </div>
+                    </div>
+                    <div id="outer2">
+                        <div id="outer2Wrapper">
+
+                            <div id="row1">
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Emerson-Bed.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Emerson Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(NBEM 003 / 78" x 60")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 97,175</p>
+                                    </div>
+                                </div>
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Chester.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Chelsea Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(SBCE7872/ 78" x 72")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 101,775</p>
+                                    </div>
+                                </div>
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Kylee-1.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Kylee Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(SBKY8472 / 84" x 72")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 88,900</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="row2">
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/esmerelda-with-new-bedsheet.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Canterbury Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(SBCA7872 / 78" x 72")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 100,900</p>
+                                    </div>
+                                </div>
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Feori.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Feori Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(KBFE 003 / 78" x 60")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 62,575</p>
+                                    </div>
+                                </div>
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Monarch-Bed-1.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Monarch Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(KBM 003 / 78" x 60")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 63,875</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="row3">
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/winchester-bed-1.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Winchester Queen Size Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(KBW 007 / 78" x 60")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 95,875</p>
+                                    </div>
+                                </div>
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/yelena-bed.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Yelena Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(KBY 003 / 78" x 60")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 54,275</p>
+                                    </div>
+                                </div>
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/bed.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Queenston Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(KBQ 003/ 78" x 60")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 58,575</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="row4">
+                                <div class="bedBox">
+                                    <div class="bedBoxImg">
+                                        <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Ivory.jpg">
+                                    </div>
+                                    <div class="bedBoxText">
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Ivory Bed</p>
+                                        <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">(NBIV 004/ 78" x 72")</p>
+                                        <p style="width: max-content; height: max-content; color: #07aea4; font-size: 18px; margin: 8px;">Rs. 209,975</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>-->
+
+        <div id="productContent">
+            <div id="productContainer">
+
+                <div class="address">
+                    <p class="addressText">Home > Beds > <b>Chelsea Bed</b></p>
+                </div>
+
+                <div id="productOuter">
+                    <div id="productPart1">
+                        <div id="productImages">
+                            <div class="imgSm">
+                                <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Chester-350x287-1.jpg">
+                            </div>
+                            <div class="imgSm">
+                                <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/20-CHELSEA-BED-350x287-2.jpg">
+                            </div>
+                        </div>
+
+                        <div id="productMainImg">
+                            <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/beds/Chester.jpg">
+                        </div>
+
+                        <div id="productDesc">
+                            <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 20px; margin: 2% 0 0 0;">Chelsea Bed – 78″ x 72″</p>
+                            <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 12px; margin: 0;">( SBCE7872 )</p>
+                            <p style="width: max-content; height: max-content; color: #07aea4; font-size: 22px; margin-top: 4%;">Rs. 101,775</p>
+                            <p style="width: 80%; height: max-content; text-align: justify; color: #8C8C8C; font-size: 18px; margin: 2% 0 0 0;">Fascinating bed design crafted using finest steel to provide embellishment to the most tranquil place in your house. Robust steel frame with excellently stitched upholstery will improve your room’s décor at best.</p>
+                        </div>
+                    </div>
+
+                    <div id="productPart2">
+                        <div id="productPart2Header">
+                            <div style="width: 3%; height: 100%; margin-left: 2%;">
+                                <img style="width: 100%; height: 100%; background-size: cover;" src="assets/img/icons8-quill-pen-28.png">
+                            </div>
+                            <div>
+                                <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0;">Description</p>
+                            </div>
+                        </div>
+                        <div>
+                            <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0 0 0.5% 2%;"><b>Dimensions</b></p>
+                            <ul style="margin: 0">
+                                <li style="color: #8C8C8C;">Length – 78″ | Width – 72″ | Height – 44″ (Inch)</li>
+                            </ul>
+                            <p style="width: max-content; height: max-content; color: #8C8C8C; font-size: 16px; margin: 0.5% 0 0.5% 2%;"><b>Warranty</b></p>
+                            <ul style="margin: 0">
+                                <li style="color: #8C8C8C;">2 year warranty for structure</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
         <div id="footer">
             <div id="footerDiv1">
